--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">AndroidStudioProject</string>
+    <string name="app_name">FlighScope</string>
     <string name="flightscope">Добро пожаловать в FlightScope</string>
     <string name="test_logo">Test logo</string>
     <string name="sorry">К сожалению, ничего не найдено.</string>
     <string name="flightnumber">Введите номер авиарейса</string>
     <string name="search">Найти</string>
+    <string name="account">account</string>
+    <string name="Track">Рейс:</string>
 </resources>
